[IOPAE-1473] API infoVeicoli wrap up (#61)
