# apps/vehicles/src/app/api/infoVeicoli/route.ts
@@ -1,18 +1,55 @@
+import { Veicolo } from "@/generated/bff-openapi";
 import { retrieveVehicles } from "@/lib/bff/business";
-import { handleInternalErrorResponse } from "@/lib/bff/errors";
-import { withJWTAuthHandler } from "@/lib/bff/wrappers";
+import {
+  handleBadRequestErrorResponse,
+  handleInternalErrorResponse,
+} from "@/lib/bff/errors";
+import { withJWTAuthAndVoucherHandler } from "@/lib/bff/with-jwt-auth-voucher-handler";
+import { Voucher } from "@io-ipatente/core";
+import { ZodiosError } from "@zodios/core";
+import { AxiosError } from "axios";
 import { NextRequest, NextResponse } from "next/server";
+import { z } from "zod";
 
 import { CustomUser } from "../../../../types/next-auth";
 
 /**
  * @description Retrieve user vehicles
  */
-export const GET = withJWTAuthHandler(
-  async (request: NextRequest, { user }: { user: CustomUser }) => {
+export const GET = withJWTAuthAndVoucherHandler(
+  async (
+    request: NextRequest,
+    {
+      additionalDataJWS,
+      user,
+      voucher,
+    }: { additionalDataJWS: string; user: CustomUser; voucher: Voucher },
+  ) => {
     try {
-      const res = await retrieveVehicles(user.fiscalCode);
-      return NextResponse.json(res);
+      const res = await retrieveVehicles(
+        additionalDataJWS,
+        voucher.access_token,
+        user.fiscalCode,
+      );
+
+      const vehicles = z.array(Veicolo).safeParse(res);
+
+      if (vehicles.success) {
+        return NextResponse.json(vehicles.data);
+      }
+
+      if (res instanceof AxiosError) {
+        return NextResponse.json(
+          { detail: res.message, status: res.status },
+          { status: res.status },
+        );
+      }
+
+      if (res instanceof ZodiosError) {
+        return handleBadRequestErrorResponse(res.message);
+      }
+
+      return handleInternalErrorResponse("VehiclesRetrieveError", res);
     } catch (error) {
       // eslint-disable-next-line no-console
       console.error(
